--- a/journal.html
+++ b/journal.html
@@ -18,11 +18,9 @@
             </thead>
             <tbody>
                 <tr>
-				                <td>19-07-2022</td>
+				<td>19-07-2022</td>
                 <td>
-                <li>I attended the training session by Ankita Jain held from 9AM to 1PM</li>
-                <li>Today i learnt a bit of admin part that is how to create formula field followed by relationship concepts i.e Lookup and Master-detail  </li>
-                <li>Learnt about different field types i.e picklist,multipicklist,percent etc</li>
+                <li>I attended the training session by Ankita Jain held from 9AM to 1PM</li><li>Today i learnt a bit of admin part that is how to create formula field followed by relationship concepts i.e Lookup and Master-detail</li><li>Learnt about different field types i.e picklist,multipicklist,percent etc</li>
                 <li>Learnt field dependency concept</li>
 				<li>Also recieved notes and assignment for the day at 3PM</li>
 				<li>From 3PM i am working on assignment for the day 2</li>
@@ -30,9 +28,7 @@
                 <tr>
                 <td>18-07-2022</td>
                 <td>
-                <li>Induction meeting with Pranshu goyal</li>
-                <li>Learnt how to use microsoft team and outlook</li>
-                <li>Learnt how to use github</li>
+                <li>Induction meeting with Pranshu goyal</li><li>Learnt how to use microsoft team and outlook</li><li>Learnt how to use github</li>
                 </td>
                 </tr>
                 </tbody>
