--- a/journal.html
+++ b/journal.html
@@ -18,12 +18,33 @@
             </thead>
             <tbody>
 
+
+ <tr>
+                <td>05-08-2022</td>
+                <td><li>Today i learnt about one more web service method i.e SOAP</li><li>I learnt that we can expose apex methods as SOAP web services so that external applications can access the internal code and application</li>
+                <li>Here we use WSDL for apex tool to convert the xml file</li>
+				<li>I learnt about asynchronous process,it is a process or function that executes a task in the background without the user having to wait for the task to finish</li>
+				<li>I learnt batch apex that runs large jobs that would exceed normal processing limits also it is used for data cleansing</li><li>I learnt future methods that run in their own thread,and do not start until resources are available</li><li>Scheduled apex is used to run tasks at a specified time(daily or weekly) also we can schedule through CRON expression</li><li>Queueable apex is almost simlar to future methods and it performs sequential processing operations with external web services</li>
+				<li>I learnt about "Try-Catch-Finally" access modifiers,the try statement identifies a block of code in which an exception can occur,the catch statement can handle particular type of exception and the finally statement identifies a block of code that is guaranteed to execute and allows to clean up code </li>
+				</tr>
+
+
+
+
+
+
+
+
+
+
+
+
 <tr>
                 <td>04-08-2022</td>
                 <td><li>Today we started off the training with the topic apex deployment</li>
                 <li>I learnt how to deploy application from sandbox to production</li>
 				<li>I learnt how to do deployment using inbound and outbound change sets</li>
-				<li>I learnt about apex integration in which i learnt about a web service called 'Rest API'</li><li>Rest API supports xml,text,JSON also i learnt http methods such as httpget,httpdelete,httpput,httppost,httppatch</li><li>Also i learnt how to fetch data from inside to outside the environment and vice versa using Rest API</li>
+				<li>I learnt about apex integration in which i learnt about a web service called 'Rest API'</li><li>Rest API supports xml,text,JSON and i learnt http methods such as httpget,httpdelete,httpput,httppost,httppatch</li><li>Also i learnt how to fetch data from inside to outside the environment and vice versa using Rest API</li>
 				</tr>
 
 
